[package]
name = "oxide-enzyme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0"

llvm-sys = { version = "130.0", features = ["no-llvm-linking"] }
bindgen = "0.58"
dirs = "3.0"
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"

[build-dependencies]
bindgen = "0.56"
pkg-config = "0.3.19"
dirs = "3.0"

[dev-dependencies]

[features]
system = []
static = []
default = ["static"]
