[package]
name = "oxide-enzyme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0"
llvm-sys = { version = "130.0", features = ["no-llvm-linking"] }
dirs = "3.0"
glob = "0.3"

[build-dependencies]
dirs = "3.0"

[dev-dependencies]

[features]
system = []
static = []
default = ["static"]
