[package]
name = "enzyme-sys"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.56"
pkg-config = "0.3.19"

[dev-dependencies]
llvm-sys = { version = "110", features = ["no-llvm-linking"] }

[features]
system = []
static = []
default = ["static"]
